--- a/FHR/Base.lproj/Main.storyboard
+++ b/FHR/Base.lproj/Main.storyboard
@@ -1504,8 +1504,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7q1-zB-gbn">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7q1-zB-gbn">
                                 <rect key="frame" x="16" y="463" width="67" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="67" id="kh6-WW-Wd7"/>
+                                </constraints>
                                 <state key="normal" title="Cancel">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -1513,15 +1516,8 @@
                                     <action selector="cancel:" destination="aE8-wz-MZl" eventType="touchUpInside" id="kfy-bx-dEs"/>
                                 </connections>
                             </button>
-                            <pickerView contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CSq-vF-6PZ">
-                                <rect key="frame" x="77" y="-12" width="172" height="136"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="aE8-wz-MZl" id="IaL-Um-WYl"/>
-                                    <outlet property="delegate" destination="aE8-wz-MZl" id="yY8-4L-LtN"/>
-                                </connections>
-                            </pickerView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kml-bw-qqG">
-                                <rect key="frame" x="42" y="144" width="242" height="311"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kml-bw-qqG">
+                                <rect key="frame" x="42" y="166" width="242" height="289"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -1561,9 +1557,27 @@
                                     <outlet property="delegate" destination="aE8-wz-MZl" id="cIS-c8-Fmr"/>
                                 </connections>
                             </tableView>
+                            <pickerView contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="CSq-vF-6PZ">
+                                <rect key="frame" x="16" y="0.0" width="288" height="136"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="aE8-wz-MZl" id="IaL-Um-WYl"/>
+                                    <outlet property="delegate" destination="aE8-wz-MZl" id="yY8-4L-LtN"/>
+                                </connections>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CSq-vF-6PZ" firstAttribute="trailing" secondItem="tGl-yE-Hdc" secondAttribute="trailingMargin" id="2Pc-aH-UDb"/>
+                            <constraint firstItem="7q1-zB-gbn" firstAttribute="top" secondItem="kml-bw-qqG" secondAttribute="bottom" constant="8" symbolic="YES" id="KX8-qz-3Nv"/>
+                            <constraint firstItem="7q1-zB-gbn" firstAttribute="leading" secondItem="tGl-yE-Hdc" secondAttribute="leadingMargin" id="R0H-mp-CJH"/>
+                            <constraint firstItem="kml-bw-qqG" firstAttribute="top" secondItem="CSq-vF-6PZ" secondAttribute="bottom" constant="4" id="RUK-WX-z3b"/>
+                            <constraint firstItem="CSq-vF-6PZ" firstAttribute="leading" secondItem="7q1-zB-gbn" secondAttribute="leading" id="VyR-hC-ESg"/>
+                            <constraint firstItem="CSq-vF-6PZ" firstAttribute="top" secondItem="ICw-ny-AHc" secondAttribute="bottom" id="XrD-7A-3pZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kml-bw-qqG" secondAttribute="trailing" constant="20" id="ohf-iO-q4l"/>
+                            <constraint firstItem="kml-bw-qqG" firstAttribute="leading" secondItem="tGl-yE-Hdc" secondAttribute="leadingMargin" constant="26" id="q7E-JA-uCQ"/>
+                            <constraint firstItem="hAu-gt-8qK" firstAttribute="top" secondItem="7q1-zB-gbn" secondAttribute="bottom" constant="11" id="yVc-no-YQa"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Prebens" id="Akw-Dh-mwr">
                         <barButtonItem key="backBarButtonItem" title="  " id="7RQ-QZ-U0l"/>
@@ -1962,8 +1976,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="qct-GB-qzC"/>
         <segue reference="Avh-Av-anV"/>
-        <segue reference="zlv-4g-cht"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
